Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
-    height: 97vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -10,17 +18,25 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.container {
+    flex-grow: 1;
+}
+
 h1 {
     font-size: 50px;
+    padding: 40px;
 }
 
 h2 {
     font-size: 30px;
 }
 
+.resultDetail {
+    padding: 30px 0 20px;
+}
+
 p {
     font-size: 20px;
-    margin-top: -5px;
 }
 
 .score {
@@ -33,10 +49,7 @@ p {
     height: 160px;
     width: 150px;
     border-radius: 20px;
-}
-
-.emoji {
-    font-size: 120px;
+    font-size: 110px;
 }
 
 .selection {
@@ -84,9 +97,8 @@ p {
 }
 
 footer {
-    padding: 10px;
     font-size: inherit;
-    margin-bottom: -15px;
+    margin-bottom: 10px;
 }
 
 .fa-github {
@@ -94,7 +106,7 @@ footer {
     font-size: 24px;
     transition: transform 0.3s ease-in-out;
 }
-  
+
 .fa-github:hover {
     transform: rotate(360deg) scale(1.2);
 }
